--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <meta name="og:title" content="Javiera Romero">
 <meta name="og:description" content="Portafolio de proyectos de diseño por Javiera Romero">
 <meta name="og:image" content="https://ibb.co/fKg4NK">
-<meta name="og:url" content="cambiar">
+<meta name="og:url" content="https://jaromero5.github.io/javiera-romero/">
 <meta name="og:site_name" content="Javiera Romero">
 <meta name="og:locale" content="es_CL">
 <meta name="og:type" content="website">
